--- a/TPro/main.html
+++ b/TPro/main.html
@@ -8,7 +8,6 @@
 		<title>TPro</title>
 
 		<!-- Cascading Style Sheets -->
-		<link href="MetroJs/MetroJs.min.css" rel="stylesheet" media="screen">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/custom.css" rel="stylesheet" media="screen">		
 	</head>
@@ -99,9 +98,8 @@
 					<div class="form-group">
 						<div class="" style="text-align: center;">
 							<button type="button" class="btn btn-primary main-button" id="main-button" status="start">
-							 	<p id="start">Start</p>
-							 	<!-- <p id="run">Stop</p>
-							 	<p id="timer">07:50:50 Hr</p> -->
+							 	<p id="button_text">Start</p>
+							 	<p id="timer_display">00:00:00 Hr</p>
 							</button>
 						</div>
 					</div>
