--- a/TPro/main.html
+++ b/TPro/main.html
@@ -60,12 +60,12 @@
 			</nav>
 
 			<section id="main-sec">
-				<form class="form-horizontal task-form" id="task-form" role="form" style="padding: 13px;">
+				<form class="form-horizontal task_form" id="task_form" role="form" style="padding: 13px;">
 
 					<div class="form-group">
 						<div class="">
 							<select name="project" class="form-control project" id="project" >
-								<option>Select Project</option>
+								<option value="">Select Project</option>
 							</select>
 						</div>
 					</div>
@@ -73,7 +73,7 @@
 					<div class="form-group">
 						<div class="">
 							<select name="task_id" class="form-control task_id" id="task_id" >
-								<option>Select Task</option>
+								<option value="">Select Task</option>
 							</select>
 						</div>
 					</div>
@@ -83,36 +83,45 @@
 							<input name="task_desc" type="text" class="form-control task_desc" id="task_desc" />
 						</div>
 					</div>
-					
+
 					<div class="form-group" style="margin-bottom: 0px;">
 						<div class="pull-left" style="text-align: left">
 							<p>Allocated Time</p>
-							<p style="font-weight:bold" id="allocated_time">000:00 hr</p>
+							<p style="font-weight:bold" id="allocated_time">00:00:00 hr</p>
 						</div>
 						<div class="pull-right" style="text-align: right">
 							<p>Time Taken</p>
-							<p style="font-weight:bold" id="time_taken">000:00 hr</p>
+							<p style="font-weight:bold" id="time_taken">00:00:00 hr</p>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<div class="" style="text-align: center;">
-							<button type="button" class="btn btn-primary main-button" id="main-button" status="start">
+							<button type="button" class="btn btn-primary main-button" id="main-button" status="start" disabled="disabled">
 							 	<p id="button_text">Start</p>
-							 	<p id="timer_display">00:00:00 Hr</p>
+							 	<p id="timer_display">00:00:00</p>
+							</button>
+							<input name="task_duration"   type="hidden" class="form-control task_duration"   id="task_duration"   value="00:00:00" />
+							<input name="task_start_time" type="hidden" class="form-control task_start_time" id="task_start_time" value="0000-00-00 00:00:00" />
+							<input name="task_end_time"   type="hidden" class="form-control task_end_time"   id="task_end_time"   value="0000-00-00 00:00:00" />
+
+							<button type="button" class="btn btn-default cancel_button" id="cancel_button" >
+							 	<p id="cancel_button_text">X</p>
 							</button>
 						</div>
 					</div>
+
 					<div class="form-group">
 						<div class="" style="text-align: center;">
 							<label style="width: 15%; text-align: center;">0%</label>
 							<label style="width: 60%">
 								<label id="percentage_val" class="percentage_val">0%</label>
-								<input type="range" name="percentage" id="percentage" min="0" max="100" style="width: 100%; outline: none;" step="5" />
+								<input type="range" name="percentage" id="percentage" disabled="disabled" min="0" max="100" value="0" style="width: 100%; outline: none;" step="5" />
 							</label>
 							<label style="width: 15%; text-align: center;">100%</label>
 						</div>
 					</div>
+					
 				</form>
 			</section>
 
